# data-converter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  DataConverter.cpp  DataConverter.h  ISink.h  ISource.h  MockSink.h  MockSource.h  Sink.cpp  Sink.h  Source.cpp  Source.h
tst/: CMakeLists.txt  data_converter_test.cpp
